--- a/PlaylistRetriever/Views/BuildKeyDialogWindow.xaml
+++ b/PlaylistRetriever/Views/BuildKeyDialogWindow.xaml
@@ -4,14 +4,18 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PlaylistRetriever"
+        xmlns:viewModels="clr-namespace:PlaylistRetriever.ViewModels"
         mc:Ignorable="d"
         Title="BuildKeyWindow" Height="155" Width="400" MinHeight="155" MinWidth="400">
+    <Window.DataContext>
+        <viewModels:BuildKeyDialogViewModel/>
+    </Window.DataContext>
     <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}">
         <Label x:Name="lblID" Content="Client ID:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0" Padding="2,0,0,0" />
         <TextBox x:Name="txtID" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="10,25,10,0" Text="{Binding Path=ClientID, Mode=TwoWay}" />
         <Label x:Name="lblSecret" Content="Client Secret:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,50,0,0" Padding="2,0,0,0" />
         <TextBox x:Name="txtSecret" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="10,65,10,0" Text="{Binding Path=ClientSecret, Mode=TwoWay}" />
-        <Button x:Name="btnCancel" Content="_Cancel" Width="75" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,10,10" Click="BtnCancel_Click" />
-        <Button x:Name="btnBuild" Content="_Build" Width="75" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,90,10" Click="BtnBuild_Click" />
+        <Button x:Name="btnCancel" Content="_Cancel" Width="75" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,10,10" Command="{Binding CancelCommand}" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
+        <Button x:Name="btnBuild" Content="_Build" Width="75" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,90,10" Command="{Binding BuildCommand}" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
     </Grid>
 </Window>
