--- a/PlaylistRetriever/Views/FormatWindow.xaml
+++ b/PlaylistRetriever/Views/FormatWindow.xaml
@@ -4,16 +4,16 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PlaylistRetriever"
-        xmlns:viewModels="clr-namespace:PlaylistRetriever.ViewModels"
         mc:Ignorable="d"
-        Title="Adjust Column Format" Height="300" Width="485" MinHeight="270" MinWidth="485" MaxWidth="485">
-    <Window.DataContext>
+        Title="Adjust Column Format" Height="300" Width="485" MinHeight="270" MinWidth="485" MaxWidth="485"
+        DataContext="{Binding FormatWindow, Source={StaticResource Locator}}">
+    <!--<Window.DataContext>
         <viewModels:FormatWindowViewModel/>
-    </Window.DataContext>
+    </Window.DataContext>-->
     <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" >
         <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Margin="10,10,10,40" HorizontalAlignment="Left" VerticalAlignment="Stretch" Panel.ZIndex="1">
             <Label Content="Select the columns you want saved" Margin="0,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Panel.ZIndex="2"/>
-            <ListView Margin="0,31,0,0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="195" Panel.ZIndex="2" ItemsSource="{Binding TotalColumnItems, Mode=TwoWay}"/>
+            <ListView Margin="0,31,0,0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="195" Panel.ZIndex="2" ItemsSource="{Binding TotalColumnItems, Mode=TwoWay}" SelectedIndex="{Binding TotalColumnIndex, Mode=TwoWay}" />
         </Grid>
         <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Margin="205,0,0,0" Width="60" Height="212" HorizontalAlignment="Left" VerticalAlignment="Stretch" Panel.ZIndex="1">
             <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Margin="0,0,0,0" Width="30" Height="100" HorizontalAlignment="Center" VerticalAlignment="Center" Panel.ZIndex="2">
@@ -33,11 +33,11 @@
         </Grid>
         <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Margin="0,10,10,40" VerticalAlignment="Stretch" HorizontalAlignment="Right" Panel.ZIndex="1">
             <Label Content="Include columns in this order" Margin="0,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Panel.ZIndex="2"/>
-            <ListView Margin="0,31,0,0" HorizontalAlignment="Left" VerticalAlignment="Stretch" Width="195" Panel.ZIndex="2" ItemsSource="{Binding OrderedColumnItems, Mode=TwoWay}"/>
+            <ListView Margin="0,31,0,0" HorizontalAlignment="Left" VerticalAlignment="Stretch" Width="195" Panel.ZIndex="2" ItemsSource="{Binding OrderedColumnItems, Mode=TwoWay}" SelectedIndex="{Binding OrderedColumnIndex, Mode=TwoWay}"/>
         </Grid>
         <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Margin="10,0,10,10" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Panel.ZIndex="1">
             <Button Content="_Cancel" Margin="0,0,0,0" Width="75" HorizontalAlignment="Right" VerticalAlignment="Bottom" Panel.ZIndex="2" Command="{Binding CancelCommand}" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
-            <Button Content="_Save" Margin="0,0,80,0" Width="75" HorizontalAlignment="Right" VerticalAlignment="Bottom" Panel.ZIndex="2" Command="{Binding CancelCommand}" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
+            <Button Content="_Save" Margin="0,0,80,0" Width="75" HorizontalAlignment="Right" VerticalAlignment="Bottom" Panel.ZIndex="2" Command="{Binding SaveCommand}" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
         </Grid>
     </Grid>
 </Window>
