--- a/PlaylistRetriever/Views/MainWindow.xaml
+++ b/PlaylistRetriever/Views/MainWindow.xaml
@@ -5,30 +5,42 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PlaylistRetriever"
         mc:Ignorable="d"
-        Title="Spotify Playlist Retriever" Height="420" Width="420" MinWidth="420" MinHeight="472">
+        Title="Spotify Playlist Retriever" Height="420" Width="420" MinWidth="420" MinHeight="472"
+        DataContext="{Binding Main, Source={StaticResource Locator}}">
+    <Window.Resources>
+        <Style x:Key="myHeaderStyle" TargetType="{x:Type GridViewColumnHeader}">
+            <Setter Property="Visibility" Value="Collapsed" />
+        </Style>
+    </Window.Resources>
     <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}">
-        <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey }}" Height="50" Margin="10,0,10,0" VerticalAlignment="Top">
-            <Label x:Name="lblEncodedAccessKey" Content="Spotify Access Key:" />
-            <TextBox x:Name="txtAccessKey" Text="{Binding ApiAccessKey, Mode=TwoWay}" Margin="0,0,80,0" Height="23" VerticalAlignment="Bottom" />
-            <Button x:Name="btnBuildAccessKey" Content="Build..." Margin="0,0,0,0" VerticalAlignment="Bottom" HorizontalAlignment="Right" Height="23" Width="75" Click="BtnBuildAccessKey_Click" />
+        <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey }}" Height="50" Margin="5,0,5,0" VerticalAlignment="Top">
+            <Label x:Name="lblEncodedAccessKey" Content="Spotify Access Key:" Padding="2" />
+            <TextBox x:Name="txtAccessKey" Text="{Binding ApiAccessKey, Mode=TwoWay}" Margin="0,0,80,0" Height="20" VerticalAlignment="Bottom" />
+            <Button x:Name="btnBuildAccessKey" Content="Build..." Margin="0,0,0,0" VerticalAlignment="Bottom" HorizontalAlignment="Right" Height="20" Width="75" Command="{Binding ShowBuildKeyDialogCommand}" />
         </Grid>
-        <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Margin="10,60,10,10">
+        <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Margin="0,55,0,0">
 
-            <TabControl x:Name="tabControl" Margin="0,0,0,0" SelectionChanged="TabControl_SelectionChanged" Padding="0">
+            <TabControl x:Name="tabControl" Margin="0" Padding="0">
                 <TabItem x:Name="tabFromPlaylistID" Header="From Playlist ID">
-                    <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Margin="0,0,0,0" >
+                    <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Margin="0" >
                         <!-- Spotify Playlist Link Grid -->
                         <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Margin="10,0,10,0" VerticalAlignment="Top" >
                             <Label x:Name="lblPlaylistID" Content="_Public Spotify Playlist ID or URL:" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top"/>
-                            <TextBox x:Name="txtPlaylistID" Text="{Binding Path=PlaylistID, Mode=TwoWay}" IsEnabled="{Binding Path=LoadEnabled, Mode=TwoWay}" Margin="0,36,80,0" TextWrapping="Wrap" TextChanged="TxtPlaylistID_TextChanged" Height="43" VerticalAlignment="Top" ToolTip="The URL or ID of a public Spotify Playlist"/>
-                            <Button x:Name="cmdLoad" Content="_Load" Click="CmdLoad_Click" IsEnabled="{Binding Path=LoadEnabled, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Height="20" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,59,0,0" Width="75" Padding="0"/>
+                            <TextBox x:Name="txtPlaylistID" Text="{Binding Path=PlaylistID, Mode=TwoWay}" IsEnabled="{Binding Path=LoadEnabled, Mode=TwoWay}" Margin="0,36,80,0" TextWrapping="Wrap" Height="43" VerticalAlignment="Top" ToolTip="The URL or ID of a public Spotify Playlist"/>
+                            <Button x:Name="cmdLoad" Content="_Load" Command="{Binding LoadPlaylistFromIDCommand}" IsEnabled="{Binding Path=LoadEnabled, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Height="20" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,59,0,0" Width="75" Padding="0"/>
 
                         </Grid>
 
                         <!-- Loaded Playlists Grid -->
                         <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Margin="10,79,10,160">
                             <Label x:Name="lblLoadedPlaylists" Content="Loaded Playlists:"/>
-                            <ListView x:Name="lvwLoadedPlaylists" Margin="0,25,80,00" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+                            <ListView x:Name="lvwLoadedPlaylists" Margin="0,25,80,00" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding LoadedPlaylistsList, Mode=TwoWay}" ScrollViewer.HorizontalScrollBarVisibility="Hidden">
+                                <ListView.View>
+                                    <GridView ColumnHeaderContainerStyle="{StaticResource myHeaderStyle}">
+                                        <GridViewColumn Header="Name" DisplayMemberBinding="{Binding name}" Width="500"/>
+                                    </GridView>
+                                </ListView.View>
+                            </ListView>
                             <Button x:Name="btnDeletePlaylist" Content="_Delete" Height="20" Width="75" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,0,00" IsEnabled="{Binding Path=DeletePlaylistEnabled, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                             <Button x:Name="btnReloadPlaylist" Content="_Reload" Height="20" Width="75" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,0,25" IsEnabled="{Binding Path=ReloadPlaylistEnabled, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                         </Grid>
@@ -42,20 +54,20 @@
                         <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Margin="10,0,10,90" VerticalAlignment="Bottom" Height="70">
                             <Label x:Name="lblFormat" Content="Save Format:" HorizontalAlignment="Left" Margin="0,0,0,45" VerticalAlignment="Bottom"/>
                             <TextBox x:Name="txtFormatExample" Text="{Binding Path=FormatString, Mode=OneWay}" Height="45" Margin="0,0,80,0" TextWrapping="Wrap" VerticalAlignment="Bottom" IsReadOnly="True" VerticalScrollBarVisibility="Auto" Background="{DynamicResource {x:Static SystemColors.InactiveSelectionHighlightBrushKey}}"/>
-                            <Button x:Name="cmdDefault" Content="_Default" HorizontalAlignment="Right" Margin="0,0,0,25" VerticalAlignment="Bottom" Width="75" Click="CmdDefault_Click"/>
-                            <Button x:Name="cmdFormat" Content="_Format..." HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="75" Click="CmdFormat_Click"/>
+                            <Button x:Name="cmdDefault" Content="_Default" HorizontalAlignment="Right" Margin="0,0,0,25" VerticalAlignment="Bottom" Width="75" Command="{Binding FormatColumnsAsDefaultCommand}"/>
+                            <Button x:Name="cmdFormat" Content="_Format..." HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="75" Command="{Binding OpenFormatWindowCommand}"/>
                         </Grid>
 
                         <!-- Save Location Grid -->
                         <Grid Height="59" Margin="0,0,0,30" VerticalAlignment="Bottom" IsEnabled="False">
                             <Label x:Name="lblSaveLocation" Content="Save _Location:" Margin="10,0,0,33" HorizontalAlignment="Left" Width="86" Height="26" VerticalAlignment="Bottom"/>
-                            <TextBox x:Name="txtSaveLocation" TextChanged="TxtSaveLocation_TextChanged" Text="{Binding Path=SaveLocation, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Height="23" Margin="10,0,40,10" TextWrapping="Wrap" VerticalAlignment="Bottom"/>
-                            <Button x:Name="cmdBrowseFilesystem" Content="..." HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,10,10" Width="25" Height="23" Click="CmdBrowseFilesystem_Click"/>
+                            <TextBox x:Name="txtSaveLocation" Text="{Binding Path=SaveLocation, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Height="23" Margin="10,0,40,10" TextWrapping="Wrap" VerticalAlignment="Bottom"/>
+                            <Button x:Name="cmdBrowseFilesystem" Content="..." HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,10,10" Width="25" Height="23"/>
                         </Grid>
                         
                         <!-- Save & Close Buttons -->
-                        <Button x:Name="cmdSave" Content="_Save" HorizontalAlignment="Right" Margin="0,0,90,10" VerticalAlignment="Bottom" Width="75" Click="CmdSave_Click" IsEnabled="{Binding Path=SaveEnabled, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/>
-                        <Button x:Name="cmdClose" Content="_Close" HorizontalAlignment="Right" Margin="0,0,10,10" Width="75" Height="20" VerticalAlignment="Bottom" Click="CmdClose_Click"/>
+                        <Button x:Name="cmdSave" Content="_Save" HorizontalAlignment="Right" Margin="0,0,90,10" VerticalAlignment="Bottom" Width="75" IsEnabled="{Binding Path=SaveEnabled, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" Command="{Binding SavePlaylistFromIDCommand}"/>
+                        <Button x:Name="cmdClose" Content="_Close" HorizontalAlignment="Right" Margin="0,0,10,10" Width="75" Height="20" VerticalAlignment="Bottom" Command="{Binding CloseCommand}" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
                     </Grid>
                 </TabItem>
                 <TabItem x:Name="tabFromSpotifyAccount" Header="From Account">
