--- a/PlaylistRetriever/App.xaml
+++ b/PlaylistRetriever/App.xaml
@@ -9,7 +9,7 @@
     xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
     <Application.Resources>
         <ResourceDictionary>
-            <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" xmlns:vm="clr-namespace:PlaylistRetriever.ViewModels" />
+            <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" xmlns:vm="clr-namespace:PlaylistRetriever.Infrastructure" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
