--- a/PlaylistRetriever/Views/FormatDialogWindow.xaml
+++ b/PlaylistRetriever/Views/FormatDialogWindow.xaml
@@ -6,38 +6,54 @@
         xmlns:local="clr-namespace:PlaylistRetriever"
         mc:Ignorable="d"
         Title="Adjust Column Format" Height="300" Width="485" MinHeight="270" MinWidth="485" MaxWidth="485"
+        FontFamily="Verdana" FontSize="12"
         DataContext="{Binding FormatWindow, Source={StaticResource Locator}}">
     <!--<Window.DataContext>
         <viewModels:FormatWindowViewModel/>
     </Window.DataContext>-->
-    <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" >
-        <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Margin="10,10,10,40" HorizontalAlignment="Left" VerticalAlignment="Stretch" Panel.ZIndex="1">
-            <Label Content="Select the columns you want saved" Margin="0,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Panel.ZIndex="2"/>
-            <ListView Margin="0,31,0,0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="195" Panel.ZIndex="2" ItemsSource="{Binding RemainingColumns, Mode=TwoWay}" SelectedIndex="{Binding RemainingColumnsIndex, Mode=TwoWay}" />
-        </Grid>
-        <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Margin="205,0,0,0" Width="60" Height="212" HorizontalAlignment="Left" VerticalAlignment="Stretch" Panel.ZIndex="1">
-            <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Margin="0,0,0,0" Width="30" Height="100" HorizontalAlignment="Center" VerticalAlignment="Center" Panel.ZIndex="2">
-                <Button Margin="0,0,0,0" HorizontalAlignment="Center"  VerticalAlignment="Top" Height="20" Width="30" RenderTransformOrigin="0.25,0.588"  Panel.ZIndex="3" Padding="0" Command="{Binding TakeAllCommand}">
-                    <TextBlock>&gt;&gt;</TextBlock>
-                </Button>
-                <Button Margin="0,25,0,0" HorizontalAlignment="Center" VerticalAlignment="Top" Height="20" Width="30" RenderTransformOrigin="0.25,0.588"  Panel.ZIndex="3" Padding="0" Command="{Binding TakeCommand}">
-                    <TextBlock>&gt;</TextBlock>
-                </Button>
-                <Button Margin="0,55,0,0" HorizontalAlignment="Center" VerticalAlignment="Top" Height="20" Width="30" RenderTransformOrigin="0.25,0.588"  Panel.ZIndex="3" Padding="0" Command="{Binding ReturnCommand}">
-                    <TextBlock>&lt;</TextBlock>
-                </Button>
-                <Button Margin="0,80,0,0" VerticalAlignment="Top" Height="20" RenderTransformOrigin="0.25,0.588"  Panel.ZIndex="3" Padding="0" HorizontalAlignment="Center" Width="30" Command="{Binding ReturnAllCommand}">
-                    <TextBlock>&lt;&lt;</TextBlock>
-                </Button>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="30"/>
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="30"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="20" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+
+            <Label Grid.Column="0" Grid.Row="0" Content="Select the columns you want saved" Padding="0" Margin="5,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            <ListView Grid.Column="0" Grid.Row="1" Margin="5,0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding RemainingColumns, Mode=TwoWay}" SelectedIndex="{Binding RemainingColumnsIndex, Mode=TwoWay}" />
+
+            <Grid Grid.Column="1" Grid.RowSpan="2" Margin="0" HorizontalAlignment="Center" VerticalAlignment="Stretch">
+                <StackPanel VerticalAlignment="Center">
+                    <Button Margin="0" HorizontalAlignment="Center"  VerticalAlignment="Top" Height="20" Width="30" RenderTransformOrigin="0.25,0.588"  Panel.ZIndex="3" Padding="0" Command="{Binding TakeAllCommand}">
+                        <TextBlock>&gt;&gt;</TextBlock>
+                    </Button>
+                    <Button Margin="0,5,0,0" HorizontalAlignment="Center" VerticalAlignment="Top" Height="20" Width="30" RenderTransformOrigin="0.25,0.588"  Panel.ZIndex="3" Padding="0" Command="{Binding TakeCommand}">
+                        <TextBlock>&gt;</TextBlock>
+                    </Button>
+                    <Button Margin="0,10,0,0" HorizontalAlignment="Center" VerticalAlignment="Top" Height="20" Width="30" RenderTransformOrigin="0.25,0.588"  Panel.ZIndex="3" Padding="0" Command="{Binding ReturnCommand}">
+                        <TextBlock>&lt;</TextBlock>
+                    </Button>
+                    <Button Margin="0,5,0,0" VerticalAlignment="Top" Height="20" RenderTransformOrigin="0.25,0.588"  Panel.ZIndex="3" Padding="0" HorizontalAlignment="Center" Width="30" Command="{Binding ReturnAllCommand}">
+                        <TextBlock>&lt;&lt;</TextBlock>
+                    </Button>
+                </StackPanel>
             </Grid>
+
+            <Label Grid.Column="2" Grid.Row="0" Content="Include columns in this order" Padding="0" Margin="5,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            <ListView Grid.Column="2" Grid.Row="1" Margin="5,0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding TakenColumns, Mode=TwoWay}" SelectedIndex="{Binding TakenColumnsIndex, Mode=TwoWay}"/>
+
         </Grid>
-        <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Margin="0,10,10,40" VerticalAlignment="Stretch" HorizontalAlignment="Right" Panel.ZIndex="1">
-            <Label Content="Include columns in this order" Margin="0,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Panel.ZIndex="2"/>
-            <ListView Margin="0,31,0,0" HorizontalAlignment="Left" VerticalAlignment="Stretch" Width="195" Panel.ZIndex="2" ItemsSource="{Binding TakenColumns, Mode=TwoWay}" SelectedIndex="{Binding TakenColumnsIndex, Mode=TwoWay}"/>
-        </Grid>
-        <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Margin="10,0,10,10" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Panel.ZIndex="1">
-            <Button Content="_Cancel" Margin="0,0,0,0" Width="75" HorizontalAlignment="Right" VerticalAlignment="Bottom" Panel.ZIndex="2" Command="{Binding CancelCommand}" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
-            <Button Content="_Save" Margin="0,0,80,0" Width="75" HorizontalAlignment="Right" VerticalAlignment="Bottom" Panel.ZIndex="2" Command="{Binding SaveCommand}" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
-        </Grid>
+        <StackPanel Grid.Row="1" Height="20" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" Orientation="Horizontal">
+            <Button Content="_Save" Margin="0,0,5,0" Width="75" HorizontalAlignment="Right" VerticalAlignment="Bottom" Panel.ZIndex="2" Command="{Binding SaveCommand}" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
+            <Button Content="_Cancel" Margin="0" Width="75" HorizontalAlignment="Right" VerticalAlignment="Bottom" Panel.ZIndex="2" Command="{Binding CancelCommand}" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
+        </StackPanel>
     </Grid>
 </Window>
